--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Interfaces_trabajoFinal"
+        android:theme="@style/Theme.Design.NoActionBar"
         tools:targetApi="33">
         <activity
             android:name=".PaginaReproductor"
